fixed media query for mobile version to make it wider and more readable

--- a/style.css
+++ b/style.css
@@ -105,6 +105,6 @@ li {
 @media (max-width: 540px) {
   /* For a screen < 540px, this CSS will be read */
   .container {
-    width: 300px;
+    width: 400px;
   }
 }
